--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ install:
   - ./travis-tool.sh install_aptget libboost-program-options-dev
   - ./travis-tool.sh install_r Rcpp
 
-script: ./travis-tool.sh run_tests
+script: 
+  - ./travis-tool.sh run_tests
 
 after_failure:
   - ./travis-tool.sh dump_logs
