--- a/configure.in
+++ b/configure.in
@@ -150,18 +150,19 @@ if test "x$want_boost" = "xyes"; then
     dnl allow for real multi-arch paths e.g. /usr/lib/x86_64-linux-gnu. Give
     dnl them priority over the other paths since, if libs are found there, they
     dnl are almost assuredly the ones desired.
-    AC_REQUIRE([AC_CANONICAL_HOST])
-    libsubdirs="lib/${host_cpu}-${host_os} $libsubdirs"
+    dnl AC_REQUIRE([AC_CANONICAL_HOST])
+    dnl libsubdirs="lib/${host_cpu}-${host_os} $libsubdirs"
 
     dnl additional debian/ubuntu problem:
     dnl   on x86, we want /usr/lib/i386-linux-gnu  even though the cpu mauy i686
     dnl   on x64, we want /usr/lib/x86_64-linux-gnu/
+    dnl we hardcode 'linux-gnu' here as a simplification as this goes to CRAN only
     case $ax_arch in
       i686|i586|i486|i386)
-         libsubdirs="lib/i386-${host_os} $libsubdirs"
+         libsubdirs="lib/i386-linux-gnu $libsubdirs"
          ;;
       x86_64)
-         libsubdirs="lib/${ax_arch}-${host_os} $libsubdirs"
+         libsubdirs="lib/${ax_arch}-linux-gnu $libsubdirs"
          ;;
     esac
 
