--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RVowpalWabbit
-Title: R interface to the Vowpal Wabbit
-Version: 0.0.6
-Date: 2014-01-07
+Title: R Interface to the Vowpal Wabbit
+Version: 0.0.6.1
+Date: 2015-10-09
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel <edd@debian.org>
 Description: R interface to Vowpal Wabbit fast out-of-core learning system
@@ -24,7 +24,8 @@ Description: R interface to Vowpal Wabbit fast out-of-core learning system
  the cluster/ directory of the upstream sources.  Use of the software as a
  network servie is also not directly supported as the aim is a simpler direct
  call from R for validation and comparison.
-Depends: R (>= 2.12.0), Rcpp (>= 0.9.6)
+Depends: R (>= 2.12.0)
+Imports: Rcpp (>= 0.11.0)
 LinkingTo: Rcpp
 SystemRequirements: The Boost 'program_options' library (http://boost.org) is required.
 OS_type: unix
