--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: RVowpalWabbit
 Title: R Interface to the Vowpal Wabbit
-Version: 0.0.7
-Date: 2016-07-17
+Version: 0.0.7.1
+Date: 2016-10-16
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel <edd@debian.org>
 Description: The 'Vowpal Wabbit' project is a fast out-of-core learning
@@ -18,3 +18,4 @@ SystemRequirements: The Boost 'program_options' library (http://boost.org) is re
 OS_type: unix
 License: GPL (>= 2)
 URL: https://github.com/JohnLangford/vowpal_wabbit/ http://dirk.eddelbuettel.com/code/rcpp.html
+BugReports: https://github.com/eddelbuettel/rvowpalwab/issues
