--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Description: The 'Vowpal Wabbit' project is a fast out-of-core learning
  service is also not directly supported as the aim is a simpler direct call
  from R for validation and comparison. Note that this package contains an
  embedded older version of 'Vowpal Wabbit'. The package 'rvw' at the GitHub
- repo <https://github.com/eddelbuettel/rvw> can provide an alternative using 
+ repo <https://github.com/rvw-org/rvw-legacy> can provide an alternative using 
  an external 'Vowpal Wabbit' library installation.
 Depends: R (>= 2.12.0)
 Imports: Rcpp
